# fjbtndrv

./: AUTHORS  COPYING  Makefile  Makefile.am  autogen.sh  config.mk  configure  configure.ac  configure.in  fsc_btns.c  fscd.c
contrib/: 10-laptop-panel-fjtbl.fdi  30-keymap-fjbtndrv.fdi  30-orientations-fjbtndrv.fdi  65-fsc_btns.rules  Makefile.am  dkms.conf.in  fscd-rotate.sample  fscd-script-rotate.sample  fscd.desktop.in  fscrotd.desktop.in  hal-system-lcd-get-brightness-fjtbl  hal-system-lcd-set-brightness-fjtbl  rotate-script.sample  rotate-wacom.sh  switch-vkeyboard.sh  udev.rules.in
data/: Makefile.am  de.khnz.fjbtndrv.conf
debian/: changelog  control  control.modules.in  copyright  fsc-btns-kernel-source.install  fsc-btns-kernel-source.postinst  fsc-btns-kernel-source.prerm  fsc-btns-modules-_KVERS_.postinst.modules.in  fsc-btns-modules-_KVERS_.postrm.modules.in  fsc-btns-modules-_KVERS_.preinst.modules.in  fscd.install  fscrotd.install  postinst  preinst  prerm  rules
patches/: hal-input-add-key-fn.diff  hal-input-add-released-repeat.diff  hal-system-lcd-get-brightness-linux.diff  hal-system-lcd-set-brightness-linux.diff  krandrtray-add-dl-wacom-rotation-support.diff  krandrtray-add-tablet_mode-switch-support.diff
patches/hal/: 10-keyboard-policy.fdi  20-fjtbl_btns.fdi  20-fjtblpc-lcd.fdi  addon-input.c  hal-system-lcd-get-brightness-fjtbl  hal-system-lcd-set-brightness-fjtbl  install.sh
po/: LINGUAS  Makevars  POTFILES.in  de.po  fr.po  nl.po  ru.po
rules/: 95-fjbproxy.rules.in  95-fjbtndrv.rules.in  Makefile.am
src/: Makefile.am  fjbdaemon.c  fjbproxy.c  fjbtndrv-backlight.c  fjbtndrv-backlight.h  fjbtndrv-daemon.c  fjbtndrv-daemon.h  fjbtndrv-daemon.xml  fjbtndrv-device.c  fjbtndrv-device.h  fjbtndrv-display.c  fjbtndrv-display.h  fjbtndrv-osd.c  fjbtndrv-osd.h  fjbtndrv-proxy.c  fjbtndrv-proxy.h  fjbtndrv-x11.c  fjbtndrv-x11.h  fjbtndrv.h  fscd-base.c  fscd-base.h  fscd-gui.h  fscd-nogui.c  fscd-wacom.c  fscd-xosd.c  fscd.c  fscd.h  fscrotd.c  gui-nogui.c  gui-xosd.c  gui.h  rotation.c  rotation.h  wacom.c  wacom.h
src/linux/: Kconfig  Makefile  fsc_btns.c  fujitsu-tablet.c
utils/: map-keycodes.sh
